# mas

./: .gitignore  INSTALL  Makefile  Makefile.children  Makefile.git  Makefile.in  Makefile.svn  README  aclocal.m4  branch_id.txt  configure  configure.ac  configure.in  configure.svn  get_repo_version.sh
act/: branch_id.txt
act/applications/: Makefile
act/config/: mce_ACT.cfg
act/driver/: Makefile  Makefile.2.4  mce_ops.c  mce_ops.h  mce_options.h
act/include/: Makefile
act/makefiles/: Makefile.install_rule_lib
act/swig/: mce_library.i
applications/: Makefile  Makefile.children  Makefile.in
applications/dsp_cmd/: Makefile  dsp_cmd.c
applications/dsp_status/: Makefile  dsp_status
applications/example/: Makefile  example.c  example_data.c  example_direct.c
applications/mas_config/: Makefile  Makefile.in  mas_config.c
applications/mas_mon/: Makefile  mas_mon.c
applications/mas_param/: Makefile  bash.c  bash.h  crawl.c  crawl.h  csh.c  csh.h  get.c  get.h  idl.c  idl.h  info.c  info.h  main.c  mas_param.h  masconfig.c  masconfig.h  options.c
applications/mas_var/: Makefile.in  mas_var.c
applications/masdata/: Makefile  README  control.c  data.c  data.h  files.c  files.h  frames.c  frames.h  init.c  init.h  libmasdata.c  libmasdata.h  main.c  main.h  masdata.cfg  masdata.h  mcecomms.c  mcecomms.h  server.c  server.h
applications/maslog/: Makefile  client.c  init.c  init.h  logger.c  logger.h  main.c  maslog  maslog.cfg
applications/mce_cmd/: Doxyfile  Makefile  cmd.h  mce_cmd.c  mce_cmd.h  options.c  options.h
applications/mce_jam/: LICENSE.ALTERA  Makefile  jam_mce.c  jam_mce.h  jamarray.c  jamarray.h  jamcomp.c  jamcomp.h  jamcrc.c  jamdefs.h  jamexec.c  jamexec.h  jamexp.c  jamexp.h  jamexprt.h  jamheap.c  jamheap.h  jamjtag.c  jamjtag.h  jamnote.c  jamport.h  jamstack.c  jamstack.h  jamstub.c  jamsym.c  jamsym.h  jamutil.c  jamutil.h  mce.txt  sof2jam
applications/mce_ramp/: Makefile  main.c  options.c  options.h  ramp.c  ramp.h
applications/mce_status/: Makefile  cfg_dump.c  cfg_dump.h  das.c  das.h  dirfile.c  mas.c  mas.h  mce_status.c  mce_status.h  options.c
applications/mcenetd/: Makefile  mcenetd.c
applications/mux_lock/: Makefile  options.c  options.h  rs_servo.c  servo.c  servo.h  servo_err.h  sq1servo.c  sq1servo_all.c  sq1servo_sa.c  sq2servo.c
applications/psc_status/: Makefile  options.c  options.h  psc_status.c  psc_status.h
applications/raw_acq/: Makefile  raw_acq.c
applications/testing/: Makefile  eth_server.c  mce_state.c  peek.c
config/: Makefile  makefile.py  mas.cfg  mas_env.bash  mas_env.tcsh  mce.cfg  mce_ACT.cfg  mce_MCE1.cfg  mce_MCE2.cfg  mce_rc2.cfg  mce_v1.cfg  mce_v1_bac.cfg  mce_v1_biasing_ac.cfg  mce_v1_clover.cfg  mce_v1_rc2.cfg  mce_v1_rect.cfg  mce_v2.cfg  mce_v2_16tes.cfg  mce_v2_bac.cfg  mce_v2_biasing_ac.cfg  mce_v2_rect.cfg
config/cards/: bac-5  bc-1.4.2  cc-4.0.9  cc-5  psc  rc-4.0.d  rc-4.0.e  rc-5
config/legacy/: mce_v1_rect_biasing_ac.cfg  mce_v2_16tes.cfg  mce_v2_biasing_ac.cfg
config/mappings/: card-types  squids-full  squids-small  tes
config/systems/: subrack-small
config/templates/: Makefile  master-5.template  master.template
config/v4/: mce_v1_16tes.cfg  mce_v1_16tes_bac.cfg  mce_v2.cfg
config/v5/: mce_v1.cfg  mce_v1_16tes_bac.cfg  mce_v1_bac.cfg  mce_v1_rc2.cfg  mce_v2.cfg  mce_v2_16tes.cfg  mce_v2_16tes_bac.cfg  mce_v2_bac.cfg
config2/: Makefile  Makefile.in  README  mas.cin.in  mce.cin  my_mce
config2/cards/: ac  bc-1.4.2  bc-5  bc-5-revF  cc-5  rc-4.0.d  rc-5  sys-4
config2/components/: card-types  description  header  heater  log_client  log_server  mas  mas_config  mas_mce_list  mce  mcenetd_client  mcenetd_server  no_mapping  squids  squids_mux11d  subrack  tes
config2/mappings/: card-types  squids  squids-small  tes
config2/systems/: subrack-full  subrack-small
das_compat/: frameacq_stamp  mcebatchgo  mcecmd  mceframetest  mcerun  mcestatus  mcestatus.mcebat  mcestatus_text  pcicmd  resetmce  resetpci
defaults/: config.h.in  masdefault.m4
driver/: LOAD_ALL  Makefile  Makefile.2.4  Makefile.2.6  Makefile.in  Makefile.kversion  RDM.txt  README  RST.txt  data.c  data.h  data_ioctl.h  data_ops.c  data_ops.h  data_qt.c  data_qt.h  data_watcher.c  data_watcher.h  driver.h  dsp_driver.c  dsp_driver.h  dsp_ops.c  dsp_ops.h  dsp_pci.c  dsp_pci.h  dsp_pci.old.c  failure.txt  get_patch  headers.txt  kversion.h  main.c  mce_driver.c  mce_driver.h  mce_faker.c  mce_ops.c  mce_ops.h  mce_options.h  mcedsp_mknodes.in  memory.c  memory.h  (+9 more)
driver2/: Makefile.in  data_ops.h  data_qt.c  dsp_ops.c  kversion.h  mce_driver.h  mce_ops.c  mce_ops.h
driver_c6/: Makefile.2.6  Makefile.in  autoversion.h  data.c  data.h  data_ops.c  data_ops.h  data_qt.c  data_qt.h  data_watcher.c  data_watcher.h  dsp_driver.c  dsp_driver.h  dsp_ops.c  dsp_ops.h  mce_driver.c  mce_driver.h  mce_ops.c  mce_ops.h  mce_options.h  memory.h  proc.c  proc.h  reload  repeater.h  version.h.template
driver_c7/: Makefile.in  NOTES  data_watcher.c  data_watcher.h  dsp_driver.c  dsp_driver.h  dsp_regs.h  kversion.h  mce_options.h  reload  repeater.c  repeater.h  set_driver  version.h
include/: Makefile  dsp.h  dsp_errors.h  dsp_ioctl.h  libmaslog.h  mce.h  mce_errors.h  mce_ioctl.h  mce_library.h  mce_library.h.in  mcecmd.h  mceconfig.h  mcedata.h  mcedsp.h  mcenetd.h
interfaces/: Makefile  Makefile.children
makefiles/: Makefile.args  Makefile.defaults  Makefile.install  Makefile.install.in  Makefile.install_rule  Makefile.install_rule_inc  Makefile.install_rule_init  Makefile.install_rule_lib  Makefile.install_rule_python  Makefile.install_rule_swig  Makefile.paths  Makefile.paths.in  Makefile.version
python/: Makefile  check_lock.py  noise_setup.py  servo.py
scripts/: 91-mas.rules  91-mas.rules.in  Makefile  mas  mas.in  mas_make_card_id  mas_make_card_id.in  mas_mknodes  mas_mknodes.in
swig/: Makefile  README  chan.py  ex.py  inter-servo.py  interservo.py  mce.py  mceViewport.py  mce_acquisitions.py  mce_library.i  test.py  xcorr.py
trunk/: Makefile.in  configure
(+247 files in other folders)
