dnl get svn version for AC_INIT
m4_define(branch_id_val, sinclude(branch_id.txt))
m4_define(repo_version, [esyscmd(svnversion .)])
m4_define(mas_version, [translit(branch_id_val/repo_version, [
])])

AC_INIT([MAS], [mas_version], [mhasse@phas.ubc.ca or dvw@phas.ubc.ca])

# Use branch_id.txt to verify the tree identity?
AC_CONFIG_SRCDIR([branch_id.txt])
AC_PREFIX_DEFAULT([/usr/mce])


# We need C, and some stuff for installing.

AC_PROG_CC
AC_PROG_LN_S

dnl Allow the user to suppress doing the config2 stuff
AC_ARG_ENABLE([mce-cfg], [AS_HELP_STRING([--disable-mce-cfg],
              [disable building or installing mce.cfg file(s)])],
              [DO_CONFIG2=$enableval], [DO_CONFIG2=yes])
AC_SUBST(DO_CONFIG2)


# Shared libraries
AC_ARG_ENABLE([shared], [AS_HELP_STRING([--enable-shared],
              [build shared libraries instead of static ones])],
              [if test "$enableval" = "no"; then SHARED="no"; else SHARED="yes";
               fi], [SHARED="no"])
AC_SUBST(SHARED)
if test "x$SHARED" = "xyes"; then
  AC_DEFINE([SHARED],, [ Define if building shared libraries ])
fi

# Allow the user to suppress driver compile / install.

AC_ARG_ENABLE([driver],
              [AS_HELP_STRING([--disable-driver],
                              [disable driver compilation and installation])],
            [DO_MAS_DRIVER=$enableval], [DO_MAS_DRIVER=yes])
AC_ARG_WITH([driver],
            [AS_HELP_STRING([--without-driver],
                            [deprecated: use --disable-driver instead])],
      [AC_MSG_WARN([--with-driver and --without-driver are deprecated, ]
      [use --enable-driver or --disable-driver instead.])
      DO_MAS_DRIVER=$withval], [])
AC_SUBST(DO_MAS_DRIVER)

dnl Multicard MAS
AC_ARG_ENABLE([multicard],
              [AS_HELP_STRING([--enable-multicard=N], [build a MAS which ]
              [supports multiple (up to N) fibre cards.  If N is omitted, ]
              [2 is assumed.  N=0 and N=1 are eqivalent to --disable-multicard ]
              [ (ie. the default behaviour: multicard support disabled).])],
              [
               case "${enableval}" in
                 (0|1|no) MAX_FIBRE_CARD=1 ;;
                 (2|3|4|5|6|7|8|9) MAX_FIBRE_CARD="${enableval}" ;;
                 (*) MAX_FIBRE_CARD=2 ;;
               esac
               ], [MAX_FIBRE_CARD=1])
                   
AC_DEFINE_UNQUOTED(MAX_FIBRE_CARD, [$MAX_FIBRE_CARD],
          [ Define to the total allowable number of fibre cards. ])
AC_SUBST([MAX_FIBRE_CARD])
if test $MAX_FIBRE_CARD -eq 1; then
  FIRST_MCE_CIN="mce.cin"
  MCE_CFG_LIST="mce.cfg"
  MCE_CIN_LIST="mce.cin"
  MULTICARD=0
else
  FIRST_MCE_CIN="mce0.cin"
  MCE_CFG_LIST="mce0.cfg"
  MCE_CIN_LIST="mce0.cin"
  MULTICARD=1
  for n in $(seq $(expr $MAX_FIBRE_CARD - 1)); do
    MCE_CFG_LIST="$MCE_CFG_LIST mce$n.cfg"
    MCE_CIN_LIST="$MCE_CIN_LIST mce$n.cin"
  done
fi
AC_SUBST(MCE_CIN_LIST)
AC_SUBST(MCE_CFG_LIST)
AC_SUBST(FIRST_MCE_CIN)
AC_SUBST(MULTICARD)
AC_DEFINE_UNQUOTED(MULTICARD, [$MULTICARD],
                   [ Define to 1 to enable multicard MAS ])

dnl Some defaults.

AC_ARG_VAR([DEFAULT_MCE],
           [the default fibre card number (0 is used if not specified)])
if test -z "$DEFAULT_FIBRE_CARD"; then
  DEFAULT_MCE=0
fi
AC_DEFINE_UNQUOTED([DEFAULT_MCE], [$DEFAULT_MCE],
                   [ Define to the number of the default fibre card. ])

AC_ARG_VAR([DEFAULT_MASFILE],
           [the default MAS configuration file (/etc/mce/mas.cfg is used if ]
           [not specified)])
if test -z "$DEFAULT_MASFILE"; then
  DEFAULT_MASFILE="/etc/mce/mas.cfg"
fi
AC_DEFINE_UNQUOTED([DEFAULT_MASFILE], ["$DEFAULT_MASFILE"],
                   [ Define to the default MAS configuration file. ])


# Some driver options.

AC_ARG_ENABLE([quiet-driver], [AS_HELP_STRING([--enable-quiet-driver],
      [build an unnecessarily quiet kernel driver])],
    [if test "x$withval" = "xno"; then
   DRIVER_QUIET=no
else
   DRIVER_QUIET=yes
fi],
[DRIVER_QUIET=no])

if test "x$DRIVER_QUIET" = "xyes"; then
  AC_DEFINE(DRIVER_QUIET, [1],
            [ Define to 1 to remove most messages from the kernel driver. ])
fi

AC_ARG_ENABLE([verbose-driver], [AS_HELP_STRING([--enable-verbose-driver],
      [build a very chatty kernel driver (for debugging only)])],
    [if test "x$withval" = "xno"; then
   DRIVER_VERBOSE=no
else
   DRIVER_VERBOSE=yes
fi],
[DRIVER_VERBOSE=no])

if test "x$DRIVER_VERBOSE" = "xyes"; then
  AC_DEFINE(DRIVER_VERBOSE, [1],
            [ Define to 1 to add debugging messages to the kernel driver. ])
fi

AC_ARG_ENABLE([bigphysarea],
            [AS_HELP_STRING([--disable-bigphysarea], [compile driver without ]
             [bigphysarea support])],
            [DRIVER_BIGPHYS=$enableval], [DRIVER_BIGPHYS=yes])
AC_ARG_WITH([bigphysarea],
            [AS_HELP_STRING([--without-bigphysarea],
                            [deprecated: use --disable-bigphysarea instead])],
            [AC_MSG_WARN([--with-bigphysarea and --without-bigphysarea are ]
            [deprecated, use --enable-bigphysarea or --disable-bigphysarea ]
            [instead.])
            DRIVER_BIGPHYS=$withval], [])
if test "x$DRIVER_BIGPHYS" = "xyes"; then
  AC_DEFINE(BIGPHYS, [1],
            [ Define to 1 to use bigphysarea in the kernel driver. ])
fi

AC_ARG_ENABLE([fakemce],
            [AS_HELP_STRING([--enable-fakemce], [build the fakemce device ]
            [into the kernel driver])],
            [DRIVER_FAKEMCE=$enableval], [DRIVER_FAKEMCE=no])
AC_ARG_WITH([fakemce],
            [AS_HELP_STRING([--with-fakemce],
                            [deprecated: use --enable-fakemce instead])],
            [AC_MSG_WARN([--with-fakemce and --without-fakemce are ]
            [deprecated, use --enable-fakemce or --disable-fakemce instead.])
            DRIVER_FAKEMCE=$withval], [])
if test "x$DRIVER_FAKEMCE" = "xyes"; then
  AC_DEFINE(FAKEMCE, [1],
            [ Define to 1 to enable fakemce in the kernel driver. ])
fi
AC_SUBST(DRIVER_FAKEMCE)


dnl Always off, but here so autoheader picks it up.
if /bin/false; then
  AC_DEFINE(REALTIME, [1],
            [ Define to 1 to enable realtime in the kernel driver. ])
fi


# Check for php for config2
AC_CHECK_PROG([PHP_IS], [php], [yes], [no])
if test "$PHP_IS" = "no"; then
  AC_MSG_ERROR([cannot find php; perhaps you need to install php5-cli])
fi

# Configure the kernel source directory.

KERNEL_DIR=/lib/modules/`uname -r`/
AC_ARG_WITH([kernel-dir],
            [AS_HELP_STRING([--with-kernel-dir=DIR],
                            [set the target kernel source tree to DIR ]
                            [(e.g. $KERNEL_DIR)])],
            [KERNEL_DIR=$withval], [])
AC_SUBST(KERNEL_DIR)


# Allow the user to suppress/relocate swig/python compile/install

PYTHON_VERSION=`echo 'import sys; print sys.version[[:3]]' | python`
PYTHON_DIR=/usr/include/python${PYTHON_VERSION}/
AC_ARG_WITH([python],
            [AS_HELP_STRING([--with-python=(PATH|yes|no)],
                            [enable/disable swig/python compilation and ]
                            [installation, PATH default is $PYTHON_DIR])],
            [PYTHON_DIR=$withval])
AC_SUBST(PYTHON_DIR)
DO_MAS_SWIG=yes
test "$PYTHON_DIR" = "no" && DO_MAS_SWIG=no
AC_SUBST(DO_MAS_SWIG)

# MAS user and group are configurable

AC_ARG_WITH([user],
            [AS_HELP_STRING([--with-user=LOGIN],[set default MAS user])],
            [MAS_USER=$withval], [MAS_USER=mce])
AC_ARG_WITH([group],
            [AS_HELP_STRING([--with-group=GROUP],[set default MAS group])],
            [MAS_GROUP=$withval], [MAS_GROUP=mce])
AC_SUBST(MAS_USER)
AC_SUBST(MAS_GROUP)
AC_DEFINE_UNQUOTED([MAS_USER], ["$MAS_USER"], [ The MAS user ])
AC_DEFINE_UNQUOTED([MAS_GROUP], ["$MAS_GROUP"], [ The MAS group ])


# MAS install path is configurable via --prefix

MAS_PREFIX="\${prefix}"
AC_SUBST(MAS_PREFIX)


# The location of libconfig is configurable.  libconfigurable.

AC_ARG_WITH([libconfig],
            [AS_HELP_STRING([--with-libconfig=PATH],
              [specify location of libconfig, e.g. /usr/local/])],
            [LIBCONFIG_DIR=$withval],
            [LIBCONFIG_DIR=])
if test "$LIBCONFIG_DIR" != ""; then
  LIBCONFIG_ARGS="-L$LIBCONFIG_DIR/lib"
else
  LIBCONFIG_ARGS=""
fi
LIBCONFIG_ARGS="$LIBCONFIG_ARGS -lconfig"
AC_SUBST(LIBCONFIG_ARGS)


# Check for libconfig.

AC_CHECK_LIB([config], [config_init], ,
             [AC_MSG_FAILURE([could not find libconfig, ]
             [please install it from www.hyperrealm.com/libconfig/!])],
             "$LIBCONFIG_ARGS" )


# Check for pthread library
AC_SEARCH_LIBS([pthread_create],[pthread])


# Check for libreadline

AC_CHECK_HEADER([readline/readline.h], ,
             [AC_MSG_FAILURE([please install the libreadline-dev package.])])

# old versions of readline don't automatically bring in ncurses:
AC_SEARCH_LIBS([readline], [readline], , [
  AC_SEARCH_LIBS([tgetent], [ncurses], [
    # found ncurses, invalidate the cache and try again
    unset ac_cv_search_readline
    AC_SEARCH_LIBS([readline], [readline], ,
      # found ncurses, but still readline doesn't work
      [AC_MSG_FAILURE([please install the libreadline package.])])
    ],[
       # no ncurses, so just complain about readline
       AC_MSG_FAILURE([please install the libreadline package.])])])



# Check for bigphysarea.

if test "$DO_MAS_DRIVER" != "no" && test "$DRIVER_BIGPHYS" != "no"; then
BIGPHYS_H=${KERNEL_DIR}/build/include/linux/bigphysarea.h
AC_CHECK_HEADER([$BIGPHYS_H],
                [],
                [AC_MSG_FAILURE([could not find bigphysarea.h in the ]
                [kernel build tree; perhaps you want --without-bigphysarea])])
fi


dnl Check for swig and python dev headers.

if test "$PYTHON_DIR" != "no"; then
   AC_CHECK_PROG(HAS_SWIG, swig, yes, no)
   test "$HAS_SWIG" != "yes" && \
      AC_MSG_FAILURE([please install swig package or pass --without-python.])
   AC_CHECK_HEADER([$PYTHON_DIR/Python.h], ,
                   [AC_MSG_FAILURE([could not find Python.h; perhaps you want ]
                   [--with-python=... or you need to install python-dev])])
fi


dnl Paths
AC_ARG_WITH([etc-dir], [AS_HELP_STRING([--with-etc-dir=DIR],
           [the default location of the hardware config files.  (/etc/mce is ]
           [used if not specified.)])], [MAS_ETCDIR="${withval}"],
           [MAS_ETCDIR="no"])
if test "x$MAS_ETCDIR" = "xno"; then
  MAS_ETCDIR="/etc/mce"
fi
AC_SUBST([MAS_ETCDIR])

AC_ARG_WITH([mas-root], [AS_HELP_STRING([--with-mas-root=DIR],
            [the default location of the MCE Script tree. ]
            [("PREFIX/mce_script" is used if not specified.)])],
            [MAS_ROOTDIR="${withval}"], [MAS_ROOTDIR="no"])

AC_ARG_WITH([jam-dir], [AS_HELP_STRING([--with-jam-dir=DIR],
            [the default location for JAM (firmware) files. ]
            [(For multicard MAS, "PREFIX/firmware" is used if not specified. ]
            [For single-card MAS, "MAS_ROOT/firmware" is used if present, ]
            [otherwise "PREFIX/firmware" is used.)])],
            [MAS_JAMDIR="${withval}"], [MAS_JAMDIR="no"])
if test "x$MAS_JAMDIR" = "xno" -a $MAX_FIBRE_CARD -eq 1; then
  # look for an existing $MAS_ROOT/firmware
  if test "x$MAS_ROOTDIR" = "xno"; then
    cat <<EOF >conftest.sh

prefix=$prefix
test "x$prefix" = xNONE && prefix=$ac_default_prefix
echo \$prefix/mce_script
EOF

  else
    mas_root=$MAS_ROOTDIR
  fi
  if test -d $mas_root/firmware; then
    #(there is some embedded php syntax happening here...)
    MAS_JAMDIR="\$mas_root . \"/firmware\""
  fi
fi

#(there is some embedded php syntax happening here...)
if test "x$MAS_JAMDIR" = "xno"; then
  MAS_JAMDIR="\$prefix . \"/firmware\""
else
  MAS_JAMDIR="\"$MAS_JAMDIR\""
fi
AC_SUBST([MAS_JAMDIR])

#(there is some embedded php syntax happening here...)
if test "x$MAS_ROOTDIR" = "xno"; then
  MAS_ROOTDIR="\$prefix . \"/mce_script\""
else
  MAS_ROOTDIR="\"$MAS_ROOTDIR\""
fi
AC_SUBST([MAS_ROOTDIR])

AC_ARG_WITH([mas-config], [AS_HELP_STRING([--with-mas-config=DIR],
            [the default MCE Script configuration directory. ]
            [(PREFIX/config is used if not specified.)])],
            [MAS_CONFDIR="${withval}"], [MAS_CONFDIR="no"])
#(there is some embedded php syntax happening here...)
if test "x$MAS_CONFDIR" = "xno"; then
  MAS_CONFDIR="\$prefix . \"/config\""
else
  MAS_CONFDIR="\"$MAS_CONFDIR\""
fi
AC_SUBST([MAS_CONFDIR])

AC_ARG_WITH([mas-temp], [AS_HELP_STRING([--with-mas-temp=DIR],
            [the temporary directory for use by MAS and MCE Script. ]
            [(/tmp is used if not specified.)])],
            [MAS_TEMPDIR="${withval}"], [MAS_TEMPDIR="no"])
if test "x$MAS_TEMPDIR" = "xno"; then
  MAS_TEMPDIR="/tmp";
fi
AC_SUBST([MAS_TEMPDIR])

AC_ARG_WITH([data-root], [AS_HELP_STRING([--with-data-root=DIR],
            [the base data directory used by MAS and MCE Script.  For ]
            [multicard MAS, an integer fibre card number will be appended to ]
            [DIR.  (For multicard MAS, "/data/mce" is used if not specified. ]
            [For single-card MAS, "/data/cryo" is used if not specified for ]
            [backwards compatibility.)])],
            [MAS_DATAROOT="${withval}"], [MAS_DATAROOT="no"])
if test "x$MAS_DATAROOT" = "xno"; then
  if test $MAX_FIBRE_CARD -eq 1; then
    MAS_DATAROOT="/data/cryo"
  else
    MAS_DATAROOT="/data/mce"
  fi
fi
AC_SUBST([MAS_DATAROOT])

AC_ARG_WITH([mas-data], [AS_HELP_STRING([--with-mas-data=SUBDIR],
            [the subdirectory under DATA_ROOT (see --with-data-root above) ]
            [in which data is actually written. ("current_data" is used if not ]
            [specified.)])], [MAS_DATADIR="${withval}"], [MAS_DATADIR="no"])
if test "x$MAS_DATADIR" = "xno"; then
  MAS_DATADIR="current_data";
fi
AC_SUBST([MAS_DATADIR])


dnl Write.

AC_CONFIG_HEADERS([defaults/config.h])
AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([applications/mas_var/Makefile])
AC_CONFIG_FILES([config2/Makefile])
AC_CONFIG_FILES([config2/mas.cin])
AC_CONFIG_FILES([driver/Makefile])
AC_CONFIG_FILES([makefiles/Makefile.install makefiles/Makefile.paths])
AC_CONFIG_FILES([scripts/mas scripts/mas_mknodes],
                [chmod a+x $ac_file])
AC_OUTPUT

dnl Handy configure summary
echo
echo "Configure summary:"
echo "  kernel driver:           ${DO_MAS_DRIVER}"
if test "$DO_MAS_DRIVER" != "no"; then
  echo "    ... bigphysarea:       ${DRIVER_BIGPHYS}"
  echo "    ... fakemce:           ${DRIVER_FAKEMCE}"
  echo "    ... verbose debugging: ${DRIVER_VERBOSE}"
  echo "    ... disable error msg: ${DRIVER_QUIET}"
  echo
fi
echo "  shared libraries:        ${SHARED}"
if test $MAX_FIBRE_CARD -eq 1; then
  echo "  Multicard support:       no"
else
  echo "  Multicard support:       yes (max ${MAX_FIBRE_CARD} cards)"
fi
echo "  build mce.cfg:           ${DO_CONFIG2}"
echo "  MAS user/group:          ${MAS_USER}/${MAS_GROUP}"
echo
echo "  etc dir:                 \"${MAS_ETCDIR}\""
echo "  config dir:              ${MAS_CONFDIR}"
echo "  jam dir:                 ${MAS_JAMDIR}"
echo "  mce_script dir:          ${MAS_ROOTDIR}"
echo "  temp dir:                \"${MAS_TEMPDIR}\""
echo "  data root:               \"${MAS_DATAROOT}\""
echo "  data subdir:             \"${MAS_DATADIR}\""

if test "x$DO_CONFIG2" != "xno" -a ! -f config2/$FIRST_MCE_CIN; then
  echo
  if test $MAX_FIBRE_CARD -eq 1; then
    echo "
  Before building MAS, you must first select the mce.cin file to use as your
  hardware configuration file.  To do this, copy an appropriate template file
  from config2/templates to config2/mce.cin.  Then modify this file to
  match the configuration of your subrack.
"
  else
    echo "
  Before building MAS, you must first select the mce.cin files to use as your
  hardware configuration files.  For each fibre card in your system, copy an
  appropriate template files from config2/templates to config2/mce#.cin,
  (where # is the fibre card number).  Then modify each of these files to match
  the configuration of the subrack attached to the given fibre card.
"
  fi
fi
